--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "jquery": "^2.2.3",
+    "material-ui": "^0.15.0-alpha.2",
+    "node-font-awesome": "^1.0.2",
+    "normalize-css": "^2.3.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.1.1",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
