--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "jquery": "^2.2.3",
+    "material-design-icons": "^2.2.3",
     "material-ui": "^0.15.0-alpha.2",
     "node-font-awesome": "^1.0.2",
     "normalize-css": "^2.3.1",
